--- a/web/default.conf
+++ b/web/default.conf
@@ -1,9 +1,52 @@
-# Instana tracing
-opentracing_load_tracer /usr/local/lib/libinstana_sensor.so /etc/instana-config.json;
-opentracing_propagate_context;
+user www-data;
+worker_processes 4;
+pid /var/run/nginx.pid;
 
-server {
-    listen       8080;
+events {
+  worker_connections 768;
+  # multi_accept on;
+}
+
+http {
+
+  ##
+  # Basic Settings
+  ##
+
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  keepalive_timeout 65;
+  types_hash_max_size 2048;
+  large_client_header_buffers 6 32k;
+  client_max_body_size 100m;
+
+  # server_names_hash_bucket_size 64;
+  # server_name_in_redirect off;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
+
+  ##
+  # Logging Settings
+  ##
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log debug; # change from debug to warn or error for production
+
+  ##
+  # Gzip Settings
+  ##
+  gzip on;
+  gzip_disable "msie6";
+
+  ##
+  # Virtual Host Configs
+  ##
+
+  include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/sites-enabled/*;
+
+  server {
+    listen       80;
     server_name  localhost;
 
     proxy_http_version 1.1;
@@ -38,28 +81,30 @@ server {
         proxy_pass http://catalogue:8080/;
     }
 
-    # # location /api/user/ {
-    #     proxy_pass http://${USER_HOST}:8080/;
+    # location /api/user/ {
+    #     proxy_pass http://user:8080/;
     # }
 
     # location /api/cart/ {
-    #     proxy_pass http://${CART_HOST}:8080/;
+    #     proxy_pass http://cart:8080/;
     # }
 
     # location /api/shipping/ {
-    #     proxy_pass http://${SHIPPING_HOST}:8080/;
+    #     proxy_pass http://shipping:8080/;
     # }
 
     # location /api/payment/ {
-    #     proxy_pass http://${PAYMENT_HOST}:8080/;
-    # }  
+    #     proxy_pass http://payment:8080/;
+    # }
 
-    location /api/ratings/ {
-        proxy_pass http://${RATINGS_HOST}:80/;
-    }
+    # location /api/ratings/ {
+    #     proxy_pass http://ratings:80/;
+    # }
 
     location /nginx_status {
         stub_status on;
         access_log off;
     }
+}
+
 }
