--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 networks:
   roboshop:
-   driver: bridge 
+    driver: bridge
 services:
   web:
     image: web:v1
@@ -10,9 +10,15 @@ services:
     - "80:80"
     depends_on:
     - catalogue
+    - user
+    - cart
+    - mysql
+    - shipping
   mongodb:
     image: mongodb:v1
     container_name: mongodb
+    volumes:
+    - mongodb:/data/db
   catalogue:
     image: catalogue:v1
     container_name: catalogue
@@ -20,11 +26,16 @@ services:
     - mongodb
   redis:
     image: redis
+    container_name: redis
   user:
     image: user:v1
     container_name: user
     depends_on:
-      - mongodb
-      - redis
-  
-  
+    - mongodb
+    - redis
+  cart:
+    image: cart:v1
+    container_name: cart
+    depends_on:
+    - redis
+    - catalogue
