--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,4 +53,8 @@ services:
     container_name: payment
     depends_on:
       - rabbitmq
-    
+  ratings:
+    image: ratings
+    container_name: ratings
+    depends_on:
+      - mysql
